--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "headzoo/bitcoin-wallet-api",
+    "name": "communitycart/bitcoin-wallet-api",
     "description": "PHP library supporting communication with the Bitcoin wallet JSON-RPC API.",
     "type": "library",
     "license": "MIT",
@@ -8,15 +8,15 @@
     "minimum-stability" : "dev",
     "authors": [
         {
-            "name": "headzoo",
-            "email": "sean@headzoo.io"
+            "name": "communitycart",
+            "email": "jeffrey.l.roberts@gmail.com"
         }
     ],
     "require": {
         "php": ">=5.5.0",
         "ext-simplexml": "*",
         "psr/log": "dev-master",
-        "headzoo/web-tools": "dev-master"
+        "communitycart/web-tools": "dev-master"
     },
     "autoload": {
         "psr-0": {
